--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-# title = "Notre-Dame de Paris"
+title = "NeuroPhysio Online"
 baseURL = "https://neurophysio.github.io/online/"
 languageCode = "en-us"
 theme = "ananke"
